--- a/src/app/shared/components/table-ordering/table-ordering.component.html
+++ b/src/app/shared/components/table-ordering/table-ordering.component.html
@@ -1,8 +1,8 @@
 <a class="d-flex justify-content-{{ justifyContent }}" (click)="click()">
   <ng-content></ng-content>
   @if(value == ordering){
-    <span><i class="ml-50" data-feather="chevron-up"></i></span>
+    <kep-icon class="text-center" name="up"></kep-icon>
   } @else if(value == '-' + ordering) {
-    <span><i class="ml-50" data-feather="chevron-down"></i></span>
+    <kep-icon class="text-center" name="down"></kep-icon>
   }
 </a>
