[REFACTORING] problems page

--- a/src/app/modules/problems/pages/problems/sections/section-problems-table/section-problems-table.component.html
+++ b/src/app/modules/problems/pages/problems/sections/section-problems-table/section-problems-table.component.html
@@ -1,4 +1,4 @@
-<kep-table [loading]="isLoading" [empty]="pageResult?.data.length == 0">
+<kep-table [loading]="isLoading" [tableClass]="''" [empty]="pageResult?.data.length == 0">
   <ng-container header>
     <tr class="bg-gradient-primary">
       <th>
