[CHANGE] tooltip-bg-color

--- a/src/core/scss/base/bootstrap-extended/_variables.scss
+++ b/src/core/scss/base/bootstrap-extended/_variables.scss
@@ -381,7 +381,7 @@ $floating-nav-margin: 1.3rem;
 
 // Tooltips
 
-$tooltip-bg: #323232 !default;
+$tooltip-bg: #0f1014 !default;
 $tooltip-padding-y: 0.4rem !default;
 $tooltip-padding-x: 0.775rem !default;
 $tooltip-font-size: 0.857rem !default;
