--- a/src/app/modules/blog/post-detail/post-detail.component.html
+++ b/src/app/modules/blog/post-detail/post-detail.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row post-detail-page">
   <div class="col-12">
     <div class="post-detail-page-top">
       <svg viewBox="0 0 1440 319">
@@ -40,7 +40,7 @@
 
       <div class="post-dynamic-meta mt-1 mb-2">
         <button class="btn btn-danger round btn-sm" (click)="like()">
-          <i data-feather="heart" [size]="16"></i>
+          <kep-icon class="" name="heart"></kep-icon>
           <span class="btn-text-inner pl-1">{{ blogPost.likesCount }}</span>
         </button>
       </div>
