--- a/src/app/modules/blog/post-detail/post-detail.component.scss
+++ b/src/app/modules/blog/post-detail/post-detail.component.scss
@@ -1,40 +1,38 @@
 @import 'bootstrap/scss/mixins';
+@import 'bootstrap/scss/mixins/dark-layout';
 @import 'bootstrap/scss/functions';
 @import 'bootstrap/scss/variables';
 
 
 ::ng-deep {
   .post-detail-page {
-    background: #fff !important;
+    @include dark-layout {
+      .post-header {
+        .post-title {
+          color: #fff !important;
+        }
+      }
 
-    .post-detail-page-top path {
-      fill: #fff;
+      .post-content {
+        p {
+          color: #fff !important;
+        }
+      }
     }
-  }
-
-  .post-detail-page.dark-layout {
-    background: #161d31 !important;
 
     .post-detail-page-top {
-      background: linear-gradient(to right, #3f4c6b, #606c88);
+      @include dark-layout {
+        background: linear-gradient(to right, #15171c, #15171c);
+      }
 
       path {
-        fill: #161d31;
+        fill: #f5f8fa;
+
+        @include dark-layout {
+          fill: #0f1014 !important;
+        }
       }
     }
-
-    .post-header {
-      .post-title {
-        color: #fff !important;
-      }
-    }
-
-    .post-content {
-      p {
-        color: #fff !important;
-      }
-    }
-
   }
 }
 
@@ -47,7 +45,7 @@
   top: -80px;
   background: linear-gradient(to right, #eef2f3, #8e9eab);
 
-  &>svg {
+  & > svg {
     position: absolute;
     bottom: 0;
     width: 100%;
@@ -86,7 +84,7 @@
     object-fit: contain;
     height: 100%;
     text-align: left;
-    
+
     img {
       width: 100%;
       height: 100%;
