[REFACTORING] app component styles | restructure

--- a/src/app/modules/problems/components/study-plan-card/study-plan-card.component.scss
+++ b/src/app/modules/problems/components/study-plan-card/study-plan-card.component.scss
@@ -1,4 +1,4 @@
-@import 'colors/study-plans';
+@import 'styles/colors/study-plans';
 @import 'bootstrap/scss/mixins/dark-layout';
 @import 'bootstrap/scss/mixins';
 
