--- a/src/app/modules/tournaments/scss/variables.scss
+++ b/src/app/modules/tournaments/scss/variables.scss
@@ -1,7 +1,7 @@
 @import 'scss/base/bootstrap-extended/variables';
 
 $tournaments-color: mix(black, $primary, 50);
-$tournaments-bg: linear-gradient(47deg, $tournaments-color, $tournaments-color);
-$tournaments-bg-dark: linear-gradient(47deg, #161d31, 60%, #384a7d);
+$tournaments-bg: linear-gradient(47deg, $tournaments-color, mix(black, $primary, 30));
+$tournaments-bg-dark: linear-gradient(to right, darken($primary, 55),  darken($primary, 40));
 
 // $tournaments-bg: linear-gradient(to right, #29323c, #485563);
