--- a/src/app/modules/problems/pages/study-plan/study-plan.component.scss
+++ b/src/app/modules/problems/pages/study-plan/study-plan.component.scss
@@ -1,4 +1,4 @@
-@import 'colors/study-plans';
+@import 'styles/colors/study-plans';
 @import 'bootstrap/scss/mixins';
 @import 'bootstrap/scss/functions';
 @import 'bootstrap/scss/variables';
