--- a/src/app/styles/vuexy-extended/content.scss
+++ b/src/app/styles/vuexy-extended/content.scss
@@ -60,3 +60,11 @@ pre {
     width: 100%;
   }
 }
+
+:root {
+  --inherit-bg-box-shadow: 0 4px 24px 0 rgba(34, 41, 47, 0.1);
+}
+
+:root .dark-layout {
+  --inherit-bg-box-shadow: 0 2px 12px 0 rgba(255, 255, 255, 0.05);
+}
