--- a/src/app/modules/testing/pages/test/test.component.scss
+++ b/src/app/modules/testing/pages/test/test.component.scss
@@ -1,6 +1,4 @@
-@import 'bootstrap/scss/mixins';
-@import 'bootstrap/scss/functions';
-@import 'bootstrap/scss/variables';
+@import 'styles/kep-imports';
 
 .test-page-top {
   margin-left: -2rem;
