--- a/src/app/modules/testing/pages/test/test.component.html
+++ b/src/app/modules/testing/pages/test/test.component.html
@@ -32,7 +32,7 @@
         <div class="test-pass-info justify-content-center">
           <div class="mb-1">
             {{ 'BestResult' | translate }}
-            <span class="badge-pill bg-chapter-{{ test.chapter.id }} badge badge-success badge-glow">
+            <span class="badge-pill bg-chapter-{{ test.chapter.id }} badge badge-glow">
               {{ test.userBestResult }}
               /
               {{ test.questionsCount }}
@@ -42,7 +42,7 @@
   
           <div class="mb-1">
             {{ 'LastPass' | translate }}
-            <span class="badge-pill bg-chapter-{{ test.chapter.id }} badge badge-success badge-glow">
+            <span class="badge-pill bg-chapter-{{ test.chapter.id }} badge badge-glow">
               {{ test.lastPassed }}
               <span *ngIf="!test.lastPassed">
                 {{ 'NotPassed' | translate }}
@@ -122,7 +122,7 @@
                         {{ result.username }}
                       </strong>
                     </user-popover>
-                    <span class="badge-pill bg-chapter-{{ test.chapter.id }} badge badge-success badge-glow">
+                    <span class="badge-pill bg-chapter-{{ test.chapter.id }} badge badge-glow">
                       {{ result.result }}/{{ test.questionsCount }}
                     </span>
                     <br>
@@ -164,7 +164,7 @@
                         </user-popover>
                       </td>
                       <td>
-                        <span class="badge-pill bg-chapter-{{ test.chapter.id }} badge badge-success badge-glow">
+                        <span class="badge-pill bg-chapter-{{ test.chapter.id }} badge badge-glow">
                           {{ result.result }}/{{ test.questionsCount }}
                         </span>
                       </td>
