--- a/src/app/modules/testing/pages/testing/testing.component.scss
+++ b/src/app/modules/testing/pages/testing/testing.component.scss
@@ -1,51 +1,27 @@
-@import 'bootstrap/scss/mixins';
-@import 'bootstrap/scss/functions';
-@import 'bootstrap/scss/variables';
+@import 'styles/kep-imports';
 
-
-::ng-deep {
-  .tests-page-top {
-    margin-bottom: 8rem;
-  }
-
-  .tests-page-top:before {
-    content: "";
-    margin-left: -2rem;
-    position: absolute;
-    top: -150px;
-    width: calc(100% + 2rem);
-    z-index: -1;
-    height: 530px;
-    background: linear-gradient(to right, #FFFFFF, #ECE9E6);
-  }
-
-  .dark-layout .tests-page-top:before {
-    background: linear-gradient(to right, #15171c, #3d4a6c) !important;
-  }
-
-  @include media-breakpoint-down(lg) {
-    .tests-page-top:before {
-      width: calc(100% + 1.2rem);
-    }
-  }
-}
+@include define-page-top(
+  $name: 'testing',
+  $light-background: linear-gradient(to right, mix(white, $gray-100, 50), $gray-50),
+  $dark-background: linear-gradient(to right, $theme-dark-card-bg, $theme-dark-card-bg),
+  $height: 550px,
+);
 
 .chapters {
+  margin-top: 5rem;
   margin-bottom: 3rem;
   padding: 20px;
   border-radius: 10px;
   height: 120px;
-  background: linear-gradient(to right, #FFFFFF, #ECE9E6);
-}
+  background: linear-gradient(to right, mix(white, $gray-100, 50), $gray-50);
 
-::ng-deep {
-  .dark-layout .chapters {
-    background: linear-gradient(to right, #15171c, #3d4a6c);
+  @include dark-layout {
+    background: linear-gradient(to right, $theme-dark-card-bg, mix(white, $theme-dark-card-bg, 10));
   }
 
-  .chapter-card.active {
+  &.active {
     .card {
-      box-shadow: 12px 15px 20px 0px rgba(46, 61, 73, 0.15);
+      box-shadow: 12px 15px 20px 0 rgba(46, 61, 73, 0.15);
       transform: scale(1.00);
     }
   }
