--- a/src/app/styles/kep-imports.scss
+++ b/src/app/styles/kep-imports.scss
@@ -1,5 +1,7 @@
 @import 'bootstrap/scss/functions';
 @import 'bootstrap/scss/mixins';
 @import 'scss/base/bootstrap-extended/variables';
+@import 'scss/base/components/variables-dark';
 @import 'bootstrap/scss/mixins/dark-layout';
+@import 'bootstrap/scss/mixins/define-page-top';
 @import 'bootstrap/scss/mixins/breakpoints';
